# code-pathfinder

./: .gitignore  BUG-deep-chain-method-lookup-on-custom-classes.md  CLA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  R2_SETUP.md  README.md  SANDBOX.md  SECURITY.md  action.yml  codecov.yml  deprecation-notice.js  entrypoint.sh  package-lock.json  package.json  playground-Dockerfile  scan.json  server.json  test-nsjail-integration.sh  test-nsjail-podman.sh  test-nsjail-security.sh  test_memory.csv
.github/: PULL_REQUEST_TEMPLATE.md
docs/: astro.config.mjs  demo.yml  gap-012-subscript-taint-propagation.md  package-lock.json  package.json
perf_tools/: .gitignore  README.md  fast_monitor.sh
playground/: .dockerignore  README.md  go.mod  go.sum  main.go
python-dsl/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  compile_container_rules.py  compiled_rules.json  pyproject.toml  setup.py
python-dsl/codepathfinder/: __init__.py  config.py  dataflow.py  decorators.py  ir.py  matchers.py  propagation.py
python-dsl/codepathfinder/cli/: __init__.py
python-dsl/pathfinder/: __init__.py  decorators.py  ir.py
python-dsl/rules/: __init__.py  compose_rules.py  container_combinators.py  container_decorators.py  container_ir.py  container_matchers.py  container_programmatic.py  dockerfile_rules.py  python_ir.py
python-dsl/rules/python/flask/: debug_mode.py
python-dsl/tests/: test_cli.py  test_container_combinators.py  test_container_decorators.py  test_container_ir.py  test_container_matchers.py  test_container_programmatic.py  test_dataflow.py  test_decorators.py  test_ir.py  test_matchers.py  test_presets.py
python-sdk/: CHANGELOG.md  README.md  compile_container_rules.py  pyproject.toml  setup.py  test_poc_calls_on.py
python-sdk/codepathfinder/: __init__.py  container_matchers.py  container_programmatic.py  dataflow.py  decorators.py  go_decorators.py  go_ir.py  go_rule.py  go_rule_meta.py  ir.py  logic.py  matchers.py  presets.py  python_rule_meta.py  qualifiers.py  query_type.py  sinks.py  sources.py  vulnerability.py
python-sdk/codepathfinder/cli/: __init__.py
python-sdk/codepathfinder/frameworks/: __init__.py  django.py  fastapi.py  flask.py
python-sdk/examples/: owasp_top10.py
python-sdk/rules/: container_combinators.py  container_decorators.py  container_ir.py  container_matchers.py  container_programmatic.py  go_decorators.py  go_ir.py  python_decorators.py  python_ir.py
python-sdk/rules/python/deserialization/: pickle_loads.py
python-sdk/rules/python/flask/: debug_mode.py
python-sdk/scripts/: generate_sdk_manifest.py  index_go_from_cdn.py  index_python_from_cdn.py
python-sdk/tests/: test_cli.py  test_config.py  test_container_combinators.py  test_container_decorators.py  test_container_ir.py  test_container_programmatic.py  test_decorators.py  test_frameworks.py  test_go_rule.py  test_go_thirdparty_querytypes.py  test_ir.py  test_logic.py  test_matchers.py  test_propagation.py  test_propagation_phase2.py  test_query_type.py  test_querytype_integration.py  test_sinks.py  test_sources.py  test_type_aware_dataflow.py  test_type_aware_matchers.py  test_vulnerability.py
release/: latest.json
rules/: manifest.json
(+2100 files in other folders)
